Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4078

bad ERR_PTR() use in mdc_locks.c

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0
    • Lustre 2.5.0
    • 3
    • 10943

      mdc_intent_open_pack() returns NULL and ERR_PTR() while its caller mdc_enqueue() only checks its return value using IS_ERR(). mdc_intent_getattr_pack() returns ERR_PTRs but mdc_intent_getattr_async() checks its return value by comparing to NULL.

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: